<resources>
    <string name="app_name">GPS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">home</string>
    <string name="nav_maps">maps</string>
    <string name="nav_locations">Lista de ubicaciones</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_maps">Ubicación actual</string>
    <string name="menu_AcercaDe">Acerca de ..</string>
    <string name="menu_tools">Configuración</string>
    <string name="menu_locations">Lista de ubicaciones</string>


    <string name="copyright">© Dispositivos móviles</string>
    <string name="menu_poligono">menu_poligono</string>
    <string name="menu_phone_call">menu_phone_call</string>

</resources>