<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:title="@string/menu_maps"
            android:icon="@android:drawable/ic_menu_mapmode" />
        <item
            android:id="@+id/nav_locations"
            android:title="@string/menu_locations"
            android:icon="@android:drawable/ic_input_get" />
        <item
            android:id="@+id/nav_poligono"
            android:title="@string/menu_poligono"
            android:icon="@android:drawable/ic_menu_add" />
        <item
            android:id="@+id/nav_phone_call"
            android:title="@string/menu_phone_call"
            android:icon="@android:drawable/ic_menu_call" />

    </group>
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tools"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_acercaDe"
            android:title="@string/menu_AcercaDe"
            android:icon="@android:drawable/ic_menu_info_details" />
    </group>
</menu>